--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,13 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm-run-all start:tailwind -l -p start:p:*",
+    "start:tailwind": "postcss ./src/assets/css/tailwind.src.css -o ./src/assets/css/tailwind.css",
+    "start:p:watch-tailwind": "onchange 'tailwind.config.js' 'src/**/*.css' -e './src/assets/css/tailwind.css' -- npm run start:tailwind",
+    "start:p:react": "react-scripts start",
+    "build": "npm-run-all -s build:** -l",
+    "build:a:tailwind": "npm run start:tailwind",
+    "build:b:react": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -35,5 +40,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.8.6",
+    "http-proxy-middleware": "^2.0.0",
+    "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
+    "postcss": "^8.3.5",
+    "postcss-cli": "^8.3.1",
+    "postcss-nested": "^5.0.5",
+    "tailwindcss": "^2.2.0"
+  },
+  "proxy": "http://localhost:8888"
 }
